# deez2fy

./: LICENSE  README.md  deezer_utils.py  main.py  pyproject.toml  spotify_utils.py  utils.py
deez2fy/: deezer_utils.py  spotify_utils.py  utils.py
